Sizing fix for work page on mobile

--- a/resources/assets/sass/base.scss
+++ b/resources/assets/sass/base.scss
@@ -413,6 +413,13 @@ header {
                     }
                 }
             }
+            .slider-container {
+                .item {
+                    width: 100vw;
+                    -webkit-clip-path: none;
+                    margin: 0
+                }
+            }
         }
     }
 }
